Safari365 Prod/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Absolute_Luxury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absolute Luxury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_and_adventure_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active and adventure tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family Friendly</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>The Great Migration</fullName>
                </value>
                <value>
                    <fullName>Climbing Kilimanjaro</fullName>
                </value>
                <value>
                    <fullName>Wildlife Safaris</fullName>
                </value>
                <value>
                    <fullName>Gorilla Trekking</fullName>
                </value>
                <value>
                    <fullName>Beach Holiday</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Food and wine</fullName>
                </value>
                <value>
                    <fullName>History and culture</fullName>
                </value>
                <value>
                    <fullName>Golf combination holidays</fullName>
                </value>
                <value>
                    <fullName>Luxury and Pampering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adventure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adventure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adventure_activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adventure activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ages_of_Children__c</fullName>
        <label>Ages of Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Used for the Finance Closed Won Deal approval process</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Travel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Basket_Information__c</fullName>
        <label>Basket Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Beach_and_bush_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach and bush safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beach_relaxation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach relaxation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Botswana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Botswana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Currency__c</fullName>
        <label>Budget Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_or_Star_Rating__c</fullName>
        <inlineHelpText>Do you have a budget we should work within ( please specify currency excluding international airfare) or should we send you options for a 3,4 or 5 star level?</inlineHelpText>
        <label>Budget or Star Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canoe_safari__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canoe safari</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cape_Town_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cape Town (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Comments__c</fullName>
        <label>Client Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Currency_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Currency Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Display_Currency__c</fullName>
        <inlineHelpText>Choose the most likely Currency your client will want to pay in (based on their Country of Residence) The client can change this in the MembersClub if they desire, but will be unable to change once the Quotation goes to stage &quot;Raised Booking Confirmation&quot;</inlineHelpText>
        <label>Client Display Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exchange_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Climbing_Kilimanjaro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Climbing Kilimanjaro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_Month__c</fullName>
        <formula>TEXT(MONTH(CloseDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Year__c</fullName>
        <formula>TEXT(YEAR(CloseDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Client already booked</fullName>
                </value>
                <value>
                    <fullName>Lost to another agent</fullName>
                </value>
                <value>
                    <fullName>Client changed their destination</fullName>
                </value>
                <value>
                    <fullName>Client cancelled their travel plans</fullName>
                </value>
                <value>
                    <fullName>Client not contactable</fullName>
                </value>
                <value>
                    <fullName>Not our market</fullName>
                </value>
                <value>
                    <fullName>Postponed trip</fullName>
                </value>
                <value>
                    <fullName>Availablity Constraints</fullName>
                </value>
                <value>
                    <fullName>Parked - to contact later</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoS__c</fullName>
        <label>CoS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Booking_Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Your line manager needs to re-check final booking details and approve this booking before it can be changed to &quot;Closed Won Deal&quot;</inlineHelpText>
        <label>Final Booking Detail Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quotation_Count__c</fullName>
        <label>Confirmed Quotation Count</label>
        <summaryFilterItems>
            <field>Quotations__c.Confirmed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quotations__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quote_is_in_Travelogic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Workaround for migration accross from TL to go Closed Won Deal</inlineHelpText>
        <label>Confirmed Quote is in Travelogic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Target_Monthly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Target Monthly</label>
        <referenceTo>Consultant_Target_Monthly__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Date__c</fullName>
        <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the number of days from when the Opportunity was Created to the Closed Date ( ie how lonk it did take or will take to close)</inlineHelpText>
        <label>Conversion Date (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <formula>TEXT(Account.Country_of_Residence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Residence (Master)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Culture_and_history__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Culture and history</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_AdGroup__c</fullName>
        <label>DA AdGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Campaign__c</fullName>
        <label>DA Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Keyword__c</fullName>
        <label>DA Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destinations__c</fullName>
        <label>Destinations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cape Town (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Cape Winelands (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Garden Route (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Kwa-Zulu Natal (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Kruger National Park (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Madikwe</fullName>
                </value>
                <value>
                    <fullName>Sun City (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Victoria Falls</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Masai Mara</fullName>
                </value>
                <value>
                    <fullName>Serengeti National Park</fullName>
                </value>
                <value>
                    <fullName>Ngorongoro Crater</fullName>
                </value>
                <value>
                    <fullName>Kenya Beaches</fullName>
                </value>
                <value>
                    <fullName>Mt Kilimanjaro</fullName>
                </value>
                <value>
                    <fullName>Zanzibar and Pemba</fullName>
                </value>
                <value>
                    <fullName>Rwanda</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Other Tanzania National Parks</fullName>
                </value>
                <value>
                    <fullName>Other Kenya National Reserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Phptpbook_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this if the client must not receive an email offering the free photobook</inlineHelpText>
        <label>Do Not Send Photobook Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Mobile_Phone_Number__c</fullName>
        <label>Emergency Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Enquiry_Ref_No__c</fullName>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Enquiry Ref No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Enquiry_item__c</fullName>
        <label>Enquiry item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Friendly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Friendly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fishing_adventures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fishing adventures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fly_In_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fly-In safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_and_Wine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food and Wine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>Google click ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP__c</fullName>
        <formula>(  Gross_Profit__c  /Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Garden_Route_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garden Route (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Sent_to_this_Opportunity_Referrer__c</fullName>
        <description>Only tick when you have sent the gift to the person who referred this opportunity to Safari365</description>
        <label>Gift Send Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address Yet To Be Provided</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Address Provided/Updated -  Send Gift</fullName>
                </value>
                <value>
                    <fullName>Gift Sent</fullName>
                </value>
                <value>
                    <fullName>Do Not Send Gift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Tracking_Order_Details__c</fullName>
        <inlineHelpText>Recort this accurately, it will be automatically emailed to the Client once we update the &quot;Gift Send Status&quot; to &quot;Gift Sent&quot;</inlineHelpText>
        <label>Courier Company &amp; Tracking#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golf_combination_holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golf combination holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoogleOppFolderId__c</fullName>
        <inlineHelpText>Stores the Google Fiolder ID so system can reference file location</inlineHelpText>
        <label>GoogleOppFolderId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gorilla_Trekking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gorilla Trekking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Confirmed_Quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If there is a confirmed quotation linked to this Opportunity, it looks at this for the rollup</inlineHelpText>
        <label>Opportunity Has a Confirmed Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_All_Pricing_in_the_Members_Club__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please use this field ONLY if you are selling to 1) Agents who might want to markup themselves. 2) Clients want to share the Quote with Family/Friends (but wants to hide the pricing). ONLY in these cases do you not upload the Client Facing Documentation.</inlineHelpText>
        <label>Hide All Pricing in the Members Club</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hiking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hiking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_and_culture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History and culture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honeymoons_and_Romance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Honeymoons and Romance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_air_ballooning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot-air ballooning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_can_Safari365_improve__c</fullName>
        <label>How can Safari365 improve</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvements__c</fullName>
        <label>Improvements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Include_Travel_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Emergency medical evacuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>The &quot;Internal Comments&quot; are never shown to the Client, record all NB details of correspondence with the client here for future reference</inlineHelpText>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Company__c</fullName>
        <label>Internal Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safari 365</fullName>
                </value>
                <value>
                    <fullName>South Africa 365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Flight_Arrival_Details__c</fullName>
        <label>International Flight Arrival Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Flight_Departure_Details__c</fullName>
        <label>International Flight Departure Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Flight_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Flight Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>If(Arrival_Date__c -60 &lt;  CloseDate ,  CloseDate ,

Arrival_Date__c -60
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kenyan_beaches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenyan beaches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kruger_National_Park_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kruger National Park (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kwa_Zulu_Natal_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kwa-Zulu Natal (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Flag__c</fullName>
        <formula>IMAGE( 
IF( 
OR(LastActivityDate &lt; Today() - 7, LastActivityDate &lt;&gt; NULL) , 
&quot;/img/samples/flag_red.gif&quot;, 
&quot;/img/samples/flag_green.gif&quot;) , 
&quot;/s.gif&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadComments__c</fullName>
        <formula>Lead_History__r.Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <label>Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_First_Name__c</fullName>
        <label>Lead First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead History</label>
        <referenceTo>Lead_History__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Name__c</fullName>
        <label>Lead Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Mobile__c</fullName>
        <label>Lead Mobile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <formula>Lead_First_Name__c &amp; &quot; &quot; &amp; Lead_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Accommodation__c</fullName>
        <label>Level of Accommodation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Luxury: 5-star, exclusive, top-end service and facilities</fullName>
                </value>
                <value>
                    <fullName>Standard: 4-star, good quality, good location, mid-range</fullName>
                </value>
                <value>
                    <fullName>Value: 3-star, budget orientated, clean and comfortable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Luxury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_and_Pamperting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury and Pamperting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_rail_travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury rail travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Madikwe_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Madikwe (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Malaria_free_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Malaria free safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Masai_Mara_National_Reserve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Masai Mara National Reserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>May_we_use_your_photographs__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>The client has agreed to Safari365 usining their images in marketing initiatives.</inlineHelpText>
        <label>May we use your photographs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Members_Club_ID__c</fullName>
        <formula>Account.Members_Club_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Members Club ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Members_Club__c</fullName>
        <formula>&apos;https://www.safari365.com/mc/?opp=&apos; + OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Members Club Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_range_accommodation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mid-range accommodation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mozambique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mozambique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mt_Kilimanjaro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mt Kilimanjaro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namibia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Namibia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewImportedOpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewImportedOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ngorongoro_Crater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ngorongoro Crater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Photo_Books_Owed__c</fullName>
        <description>How many Photo books do we Print? NB - Check Travelogic</description>
        <inlineHelpText>How many Photo books do we Print? NB - Check Travelogic</inlineHelpText>
        <label>Number of Photo Books Owed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Kenyan_National_Reserves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Kenyan National Reserves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Tanzania_National_Parks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Tanzania National Parks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Impressions__c</fullName>
        <label>Overall Impressions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overall_client_safari_experience__c</fullName>
        <label>Overall client safari experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is used for linking Passenger child Opportunities to the original Parent Opportunity (of the Primary Passenger)</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passenger_Details_Form__c</fullName>
        <formula>&quot;https://www.safari365.com/mc/passengers/?id=&quot; + &quot;&amp;opp=&quot;+OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this link to request passenger details from your clients</inlineHelpText>
        <label>Passenger Details Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
</CustomObject>